...
            <Button
                android:id="@+id/E_newUser_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Create"
                android:textColor="@color/light_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/E_newUser_geo_setting" />

            <TextView
...
